fixed the z-index problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -445,7 +445,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.sticky-nav {
 
 .banner-text-posi-w3ls {
     position: absolute;
-    z-index: 999;
+    z-index: 9;
     left: 11%;
 }
 
